Update parent pom (#35)
* update parent pom

* fix deprecated

* rest of the updates